# ttm

./: .dockerignore  Dockerfile  compose.yaml
backend/: pyproject.toml
backend/app/: main.py
docs/: REQUIREMENTS.md
frontend/: package-lock.json  package.json  tsconfig.json
frontend/app/: root.tsx
frontend/app/routes/: home.tsx
